fix handle syntax change for volume claim templates

--- a/kustomization/components/esphome/statefulset.yml
+++ b/kustomization/components/esphome/statefulset.yml
@@ -59,7 +59,9 @@ spec:
         - emptyDir: {}
           name: esphome-cache
   volumeClaimTemplates:
-    - metadata:
+    - apiVersion: v1
+      kind: PersistentVolumeClaim
+      metadata:
         name: esphome-config
       spec:
         accessModes:
