--- a/kustomization/components/tvheadend/statefulset.yml
+++ b/kustomization/components/tvheadend/statefulset.yml
@@ -51,7 +51,9 @@ spec:
       securityContext:
         fsGroup: 65534
   volumeClaimTemplates:
-    - metadata:
+    - apiVersion: v1
+      kind: PersistentVolumeClaim
+      metadata:
         name: tvheadend-config
       spec:
         accessModes:
