--- a/plays/kairos/upgrade.yml
+++ b/plays/kairos/upgrade.yml
@@ -51,14 +51,13 @@
         contents: "{{ osreleasefile['content'] | b64decode }}"
     - name: Extract metadata
       ansible.builtin.set_fact:
-        # ex: 22.04-standard-amd64-generic-v2.5.0-k3sv1.27.9-k3s1
-        os_image_label: '{{ contents | regex_findall(''^KAIROS_IMAGE_LABEL="(.*)"$'', multiline=True) | last }}'
+        os_image_version: '{{ contents | regex_findall(''^KAIROS_VERSION="(.*)"$'', multiline=True) | last }}'
     - name: Print os image
       ansible.builtin.debug:
-        var: os_image_label
+        var: os_image_version
     - name: Print target image
       ansible.builtin.debug:
-        var: target_image_label
+        var: target_image_version
     - name: Install Recovery Update
       ansible.builtin.command:
         argv:
@@ -66,21 +65,21 @@
           - upgrade
           - --recovery
           - --source
-          - "oci:quay.io/kairos/ubuntu:{{ recovery_image_label }}"
+          - "oci:ghcr.io/marinatedconcrete/kairos-ubuntu:{{ recovery_image_version }}"
       become: true
-      when: os_image_label != target_image_label
+      when: os_image_version != target_image_version
     - name: Install update
       ansible.builtin.command:
         argv:
           - kairos-agent
           - upgrade
           - --source
-          - "oci:quay.io/kairos/ubuntu:{{ target_image_label }}"
+          - "oci:ghcr.io/marinatedconcrete/kairos-ubuntu:{{ target_image_version }}"
       become: true
-      when: os_image_label != target_image_label
+      when: os_image_version != target_image_version
     - name: Note if the host needs to be rebooted
       ansible.builtin.set_fact:
-        reboot_required: "{{ os_image_label != target_image_label or config.changed or k3s_service.changed or k3s_agent_service.changed }}"
+        reboot_required: "{{ os_image_version != target_image_version or config.changed or k3s_service.changed or k3s_agent_service.changed }}"
     - name: Schedule Drain and Reboot
       ansible.builtin.add_host:
         name: "{{ item }}"
@@ -90,8 +89,9 @@
       loop: "{{ ansible_play_batch }}"
       when: hostvars[item].reboot_required
   vars:
-    recovery_image_label: 24.04-standard-amd64-generic-v3.3.1-k3sv1.31.4-k3s1
-    target_image_label: 24.04-standard-amd64-generic-v3.3.1-k3sv1.32.1-k3s1
+    recovery_image_version: 0.1.6
+    # renovate: datasource=docker depName=ghcr.io/marinatedconcrete/kairos-ubuntu
+    target_image_version: 0.2.2
 
 - name: Serially drain and reboot hosts that need to be rebooted
   hosts: ToReboot
