--- a/renovate.json
+++ b/renovate.json
@@ -73,7 +73,7 @@
         "#\\s*renovate:\\sdatasource=(?<datasource>.*?)\\n\\s+- https://raw\\.githubusercontent\\.com/(?<depName>.*?)/(?<currentValue>v[0-9]+\\.[0-9]+\\.[0-9]+)",
         "#\\s*renovate:\\sdatasource=(?<datasource>.*?)(?:\\sversioning=(?<versioning>.*?))?\\n\\s+- https://github\\.com/(?<depName>.*?)/releases/download/(?<currentValue>.*?)/",
         "#\\s*renovate:\\sdatasource=(?<datasource>.*?)\\n\\s+- https://github\\.com/(?<depName>.*?)/raw/(?<currentValue>.*?)/",
-        "#\\s*renovate:\\sdatasource=(?<datasource>.+?)(?:\\sversioning=(?<versioning>.+?))?\\n\\s+- https://github\\.com/(?<depName>.+/.+?)/?\\?ref=(?<currentValue>.+?)$"
+        "#\\s*renovate:\\sdatasource=(?<datasource>.+?)(?:\\sversioning=(?<versioning>.+?))?\\n\\s+- https://github\\.com/(?<depName>.+/.+?)/?\\?ref=(?<currentValue>.+?)\\n"
       ],
       "versioningTemplate": "{{#if versioning}}{{versioning}}{{else}}semver-coerced{{/if}}"
     },
