--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -256,7 +256,7 @@ bind_zones:
         ip: 10.11.1.69
       - name: lg-git-ssh
         ip: 10.11.1.70
-      - name: nut.hogs
+      - name: nut-ups02.hogs
         ip: 10.11.1.71
 
       # NONET Network
