--- a/kustomization/overlays/prod/kube-vip/patches/set_vip_address.yml
+++ b/kustomization/overlays/prod/kube-vip/patches/set_vip_address.yml
@@ -8,6 +8,6 @@ spec:
     spec:
       containers:
         - env:
-            - name: address
+            - name: vip_address
               value: 10.11.0.100
           name: kube-vip
