--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -258,7 +258,7 @@ bind_zones:
         ip: 10.11.1.70
       - name: nut-ups02.hogs
         ip: 10.11.1.71
-      - name: loki.hogs
+      - name: loki-distributor.hogs
         ip: 10.11.1.72
 
       # NONET Network
