feat: setup blocky for local dns independent of router

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -248,6 +248,8 @@ bind_zones:
           - zwave.hogs
       - name: unifi-inform
         ip: 10.11.1.65
+      - name: local-dns.hogs
+        ip: 10.11.1.66
       - name: valheim-forerunner
         ip: 10.11.1.67
       - name: valheim-relic
@@ -260,6 +262,8 @@ bind_zones:
         ip: 10.11.1.71
       - name: loki-distributor.hogs
         ip: 10.11.1.72
+      - name: full-dns.hogs
+        ip: 10.11.1.73
 
       # NONET Network
       - name: "front-porch.camera.hogs"
