fix: cleanup a bunch of dead DNS entries

--- a/kustomization/components/codegen-hogs-bind9-config/configmap/etc_named.conf
+++ b/kustomization/components/codegen-hogs-bind9-config/configmap/etc_named.conf
@@ -9,10 +9,6 @@ acl "ns1" {
   10.10.0.3;
 };
 
-acl "ns2" {
-  10.10.0.4;
-};
-
 options {
   listen-on port 53 { any; };
   listen-on-v6 port 53 { ::1; };
@@ -21,7 +17,7 @@ options {
   statistics-file "/var/cache/bind/data/named_stats.txt";
   memstatistics-file "/var/cache/bind/data/named_mem_stats.txt";
   allow-query     { any; };
-  allow-transfer  { "ns1"; "ns2"; };
+  allow-transfer  { "ns1"; };
 
   recursion no;
     
@@ -52,13 +48,6 @@ include "/etc/bind/named.conf.default-zones";
 zone "tswn.us" IN {
   type master;
   file "/var/cache/bind/tswn.us";
-  notify yes;
-  allow-update { none; };
-};
-
-zone "0.2.10.in-addr.arpa" IN {
-  type master;
-  file "/var/cache/bind/0.2.10.in-addr.arpa";
   notify yes;
   allow-update { none; };
 };
