--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -3,9 +3,6 @@ bind_acls:
   - name: "ns1"
     match_list:
       - "10.10.0.3"
-  - name: "ns2"
-    match_list:
-      - "10.10.0.4"
 bind_allow_query:
   - "any"
 bind_dnssec_enable: false
@@ -17,9 +14,6 @@ bind_zones:
     create_reverse_zones: true
     primaries:
       - "10.10.0.3"
-    name_servers:
-      - "ns1.tswn.us."
-      - "ns2.tswn.us."
     hosts:
       - name: "pool.ntp.hogs"
         ip:
@@ -28,12 +22,6 @@ bind_zones:
       # PUBLIC
       - name: "tartarus01"
         ip: "149.248.37.12"
-
-      # Transit Network
-      - name: "guest.routers.hogs"
-        ip: "10.2.0.81"
-      - name: "work.routers.hogs"
-        ip: "10.2.0.84"
 
       # HOME Network
       - name: "maccabeus.hogs"
@@ -106,16 +94,8 @@ bind_zones:
         ip: 10.117.0.69
 
       # MAN Network
-      - name: "ns1"
-        ip: "10.10.0.3"
-      - name: "ns2"
-        ip: "10.10.0.4"
-      - name: "vcenter.hogs"
-        ip: "10.10.0.5"
       - name: harvest.hogs
         ip: 10.10.0.6
-      - name: "ipmi.firstlightweaveslivingsong.hogs"
-        ip: "10.10.0.10"
       - name: "ipmi.dadab.hogs"
         ip: "10.10.0.11"
       - name: ipmi-chanttogreen.hogs
@@ -157,30 +137,6 @@ bind_zones:
         ip: 10.10.0.51
       - name: kvm03.hogs
         ip: 10.10.0.52
-      - name: "esxi-intel01.hogs"
-        ip: "10.10.0.53"
-      - name: "esxi-intel02.hogs"
-        ip: "10.10.0.54"
-      - name: "esxi-intel03.hogs"
-        ip: "10.10.0.55"
-      - name: "esxi-intel04.hogs"
-        ip: "10.10.0.56"
-      - name: "centurylink.routers.hogs"
-        ip: "10.10.0.70"
-      - name: hogs.routers.hogs
-        ip: 10.10.0.78
-      - name: hogs01.routers.hogs
-        ip: 10.10.0.79
-      - name: hogs02.routers.hogs
-        ip: 10.10.0.80
-      - name: "guest01.routers.hogs"
-        ip: "10.10.0.82"
-      - name: "guest02.routers.hogs"
-        ip: "10.10.0.83"
-      - name: "work01.routers.hogs"
-        ip: "10.10.0.85"
-      - name: "work02.routers.hogs"
-        ip: "10.10.0.86"
       - name: backyard-ap.hogs
         ip: 10.10.0.90
       - name: den-ap.hogs
@@ -248,7 +204,7 @@ bind_zones:
           - zwave.hogs
       - name: unifi-inform
         ip: 10.11.1.65
-      - name: local-dns.hogs
+      - name: dns.hogs
         ip: 10.11.1.66
       - name: valheim-forerunner
         ip: 10.11.1.67
@@ -262,8 +218,6 @@ bind_zones:
         ip: 10.11.1.71
       - name: loki-distributor.hogs
         ip: 10.11.1.72
-      - name: full-dns.hogs
-        ip: 10.11.1.73
 
       # NONET Network
       - name: "front-porch.camera.hogs"
@@ -286,7 +240,6 @@ bind_zones:
         ip: 172.31.42.6
 
     networks:
-      - 10.2.0
       - 10.10.0
       - 10.11.0
       - 10.67.0
