feat: use blocky over bind9

--- a/kustomization/components/blocky/deployment.yml
+++ b/kustomization/components/blocky/deployment.yml
@@ -32,7 +32,7 @@ spec:
           env:
             - name: TZ
               value: America/Los_Angeles
-          image: spx01/blocky
+          image: docker.io/spx01/blocky
           livenessProbe:
             exec:
               command:
