fix: use local external traffic policy to better know who is requesting dns queries

--- a/kustomization/overlays/prod/factorio-relic/patches/set_load_balancer.yml
+++ b/kustomization/overlays/prod/factorio-relic/patches/set_load_balancer.yml
@@ -6,4 +6,5 @@ metadata:
     kube-vip.io/loadbalancerIPs: 10.11.1.69
   name: this-is-ignored-but-is-required
 spec:
+  externalTrafficPolicy: Local
   type: LoadBalancer
