feat: log dns queries, but not what is being queried

--- a/kustomization/overlays/prod/dns/configmap/blocky/config.yml
+++ b/kustomization/overlays/prod/dns/configmap/blocky/config.yml
@@ -160,15 +160,13 @@ fqdnOnly:
 
 log:
   format: json
+  privacy: true
 
 ports:
   http: 9000
 
 prometheus:
   enable: true
-
-queryLog:
-  type: none
 
 upstreams:
   groups:
