refactor: install hadolint in container image, not via feature

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,11 @@
 # renovate: datasource=docker depName=python
 ARG PYTHON_VERSION=3.13
+
+FROM ghcr.io/hadolint/hadolint:v2.12.0@sha256:30a8fd2e785ab6176eed53f74769e04f125afb2f74a6c52aef7d463583b6d45e AS hadolint
+
 FROM mcr.microsoft.com/devcontainers/python:1-${PYTHON_VERSION}
+
+COPY --chmod=777 --from=hadolint /bin/hadolint /usr/local/bin/hadolint
 
 RUN apt-get update \
   && apt-get install -y --no-install-recommends \
