refactor: `s/Dockerfile/Containerfile/`

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
     "build": {
         "cacheFrom": "ghcr.io/sdwilsh/ansible-playbooks-devcontainer:latest",
         "context": "..",
-        "dockerfile": "Dockerfile"
+        "dockerfile": "Containerfile"
     },
     "customizations": {
         "vscode": {
