--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -39,6 +39,7 @@ jobs:
         uses: devcontainers/ci@8bf61b26e9c3a98f69cb6ce2f88d24ff59b785c6 # v0.3.1900000417
         with:
           cacheFrom: ghcr.io/${{ github.repository }}-devcontainer
+          cacheTo: ghcr.io/${{ github.repository }}-devcontainer
           env: |
             ANSIBLE_CONFIG=ansible-ci.cfg
             CI=1
