--- a/kustomization/overlays/prod/valheim-relic/kustomization.yml
+++ b/kustomization/overlays/prod/valheim-relic/kustomization.yml
@@ -14,5 +14,9 @@ patches:
     target:
       kind: Service
       name: valheim-svc
+  - path: patches/turn_off.yml
+    target:
+      kind: StatefulSet
+      name: valheim-statefulset
 resources:
   - namespace.yml
