fix: do not specify a tag for cacheFrom

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
     "name": "ansible-playbooks",
     "build": {
-        "cacheFrom": "ghcr.io/sdwilsh/ansible-playbooks-devcontainer:latest",
+        "cacheFrom": "ghcr.io/sdwilsh/ansible-playbooks-devcontainer",
         "context": "..",
         "dockerfile": "Containerfile"
     },
