refactor: move crowdsec out of traefik pod

--- a/kustomization/components/codegen-argo-cd-applications-prod/kustomization.yml
+++ b/kustomization/components/codegen-argo-cd-applications-prod/kustomization.yml
@@ -11,6 +11,7 @@ resources:
   - application/atuin.yml
   - application/aventertainment.yml
   - application/cert-manager.yml
+  - application/crowdsec.yml
   - application/dns.yml
   - application/external-services.yml
   - application/factorio-relic.yml
