--- a/kustomization/overlays/prod/crowdsec/deployment.yml
+++ b/kustomization/overlays/prod/crowdsec/deployment.yml
@@ -2,16 +2,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: this-is-ignored-but-is-required
+  name: crowdsec-deployment
 spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: crowdsec
   template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: crowdsec
     spec:
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchExpressions:
+                  - key: app.kubernetes.io/name
+                    operator: In
+                    values:
+                      - crowdsec
+              topologyKey: kubernetes.io/hostname
       containers:
-        - name: traefik
-          volumeMounts:
-            - name: crowdsec-pages
-              mountPath: /pages
-              readOnly: true
         - command:
             - sh
             - -c
@@ -23,12 +35,12 @@ spec:
               valueFrom:
                 secretKeyRef:
                   key: password
-                  name: crowdsec-owner-user.crowdsec-16-pg.credentials.postgresql.acid.zalan.do
+                  name: crowdsec-owner-user.crowdsec-17-pg.credentials.postgresql.acid.zalan.do
             - name: DB_USERNAME
               valueFrom:
                 secretKeyRef:
                   key: username
-                  name: crowdsec-owner-user.crowdsec-16-pg.credentials.postgresql.acid.zalan.do
+                  name: crowdsec-owner-user.crowdsec-17-pg.credentials.postgresql.acid.zalan.do
             - name: LOCAL_API_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -46,21 +58,23 @@ spec:
             failureThreshold: 3
             httpGet:
               path: /metrics
-              port: cs-metrics
+              port: metrics
               scheme: HTTP
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 5
           ports:
-            - name: cs-api
-              containerPort: 8081
-            - name: cs-metrics
+            - name: api
+              containerPort: 3000
+            - name: appsec
+              containerPort: 7422
+            - name: metrics
               containerPort: 6060
           readinessProbe:
             failureThreshold: 3
             httpGet:
               path: /metrics
-              port: cs-metrics
+              port: metrics
               scheme: HTTP
             periodSeconds: 10
             successThreshold: 1
@@ -83,7 +97,7 @@ spec:
             failureThreshold: 30
             httpGet:
               path: /metrics
-              port: cs-metrics
+              port: metrics
               scheme: HTTP
             periodSeconds: 10
             successThreshold: 1
@@ -103,6 +117,7 @@ spec:
             - name: crowdsec-scripts
               mountPath: /scripts
               readOnly: true
+      enableServiceLinks: false
       initContainers:
         - command:
             - sh
@@ -110,19 +125,19 @@ spec:
             - until pg_isready; do echo "waiting for database ${PGHOST}..."; sleep 10; done;
           env:
             - name: PGHOST
-              value: crowdsec-16-pg
+              value: crowdsec-17-pg
             - name: PGPASSWORD
               valueFrom:
                 secretKeyRef:
                   key: password
-                  name: crowdsec-owner-user.crowdsec-16-pg.credentials.postgresql.acid.zalan.do
+                  name: crowdsec-owner-user.crowdsec-17-pg.credentials.postgresql.acid.zalan.do
             - name: PGSSLMODE
               value: require
             - name: PGUSER
               valueFrom:
                 secretKeyRef:
                   key: username
-                  name: crowdsec-owner-user.crowdsec-16-pg.credentials.postgresql.acid.zalan.do
+                  name: crowdsec-owner-user.crowdsec-17-pg.credentials.postgresql.acid.zalan.do
           image: postgres
           name: wait-for-crowdsec-pg-is-ready
           securityContext:
@@ -135,6 +150,7 @@ spec:
             runAsUser: 65534
             seccompProfile:
               type: RuntimeDefault
+      priorityClassName: system-cluster-critical
       volumes:
         - configMap:
             name: crowdsec-acquisitions-configmap
@@ -145,9 +161,6 @@ spec:
         - name: crowdsec-credentials-config
           secret:
             secretName: crowdsec-credentials-secret
-        - configMap:
-            name: crowdsec-pages-configmap
-          name: crowdsec-pages
         - configMap:
             defaultMode: 0777
             name: crowdsec-scripts-configmap
