--- a/kustomization/overlays/prod/traefik/configmap/traefik/dynamic.yml
+++ b/kustomization/overlays/prod/traefik/configmap/traefik/dynamic.yml
@@ -6,8 +6,8 @@ http:
         crowdsec-bouncer:
           banHTMLFilePath: /pages/ban.html
           crowdsecAppsecEnabled: true
-          crowdsecAppsecHost: {{expandenv "$POD_IP:7422"}}
-          crowdsecLapiHost: {{expandenv "$POD_IP:8081"}}
+          crowdsecAppsecHost: crowdsec-svc.crowdsec.svc.cluster.local:7422
+          crowdsecLapiHost: crowdsec-svc.crowdsec.svc.cluster.local:3000
           crowdsecLapiKeyFile: /etc/treafik/crowdsec-api-key
           crowdsecLapiScheme: http
           crowdsecMode: live
