--- a/plays/codegen/postgres-logical-backup.yml
+++ b/plays/codegen/postgres-logical-backup.yml
@@ -14,6 +14,7 @@
         namespaces:
           - 3d-printing
           - atuin
+          - crowdsec
           - homeassistant
           - immich
           - monitoring
