fix: ignore deprecated out-of-sync issue
Longhorn still includes `spec.preserveUnknownFields` in a number of
CRDs, but argocd's behavior changed in 3.0, making this always out of
sync.  For now, just ignore it.

https://argo-cd.readthedocs.io/en/stable/operator-manual/upgrading/2.14-3.0/#removing-default-ignores-of-preserveunknownfields-for-crd

--- a/kustomization/components/codegen-argo-cd-applications-prod/application/3d-printing.yml
+++ b/kustomization/components/codegen-argo-cd-applications-prod/application/3d-printing.yml
@@ -6,10 +6,15 @@ kind: Application
 metadata:
   name: 3d-printing
 spec:
-  project: default
   destination:
     server: https://kubernetes.default.svc
     namespace: 3d-printing
+  ignoreDifferences:
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      jsonPointers:
+        - /spec/preserveUnknownFields
+  project: default
   source:
     path: kustomization/overlays/prod/3d-printing
     repoURL: https://github.com/sdwilsh/ansible-playbooks
