--- a/kustomization/components/codegen-argo-cd-applications-prod/application/stirling-pdf.yml
+++ b/kustomization/components/codegen-argo-cd-applications-prod/application/stirling-pdf.yml
@@ -6,10 +6,15 @@ kind: Application
 metadata:
   name: stirling-pdf
 spec:
-  project: default
   destination:
     server: https://kubernetes.default.svc
     namespace: stirling-pdf
+  ignoreDifferences:
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      jsonPointers:
+        - /spec/preserveUnknownFields
+  project: default
   source:
     path: kustomization/overlays/prod/stirling-pdf
     repoURL: https://github.com/sdwilsh/ansible-playbooks
