--- a/kustomization/components/codegen-argo-cd-applications-prod/application/valheim-forerunner.yml
+++ b/kustomization/components/codegen-argo-cd-applications-prod/application/valheim-forerunner.yml
@@ -6,10 +6,15 @@ kind: Application
 metadata:
   name: valheim-forerunner
 spec:
-  project: default
   destination:
     server: https://kubernetes.default.svc
     namespace: valheim-forerunner
+  ignoreDifferences:
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      jsonPointers:
+        - /spec/preserveUnknownFields
+  project: default
   source:
     path: kustomization/overlays/prod/valheim-forerunner
     repoURL: https://github.com/sdwilsh/ansible-playbooks
